[package]
name = "nostui"
version = "0.1.1"
edition = "2021"
description = "A TUI client for Nostr"
keywords = ["nostr", "tui", "client", "ratatui"]
categories = ["command-line-utilities"]
repository = "https://github.com/akiomik/nostui"
homepage = "https://github.com/akiomik/nostui"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["src", "LICENSE", "README.md", "screenshot.gif", ".config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.41"
clap = { version = "4.5.18", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.5"
config = "0.15.13"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.170"
log = "0.4.27"
nostr-sdk = "0.44.0"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
signal-hook = "0.3.17"
sorted-vec = "0.8.6"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
thousands = "0.2.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.37"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }
tui-textarea = "0.7.0"
tui-widget-list = "0.13.2"
unicode-width = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.22.0"

[lints.clippy]
absolute_paths = "warn"
clone_on_ref_ptr = "warn"
items_after_statements = "warn"
redundant_clone = "warn"
uninlined_format_args = "warn"
used_underscore_binding = "warn"
unwrap_used = "warn"
