[package]
name = "nostui"
version = "0.1.1"
edition = "2021"
description = "A TUI client for Nostr"
keywords = ["nostr", "tui", "client", "ratatui"]
categories = ["command-line-utilities"]
repository = "https://github.com/akiomik/nostui"
homepage = "https://github.com/akiomik/nostui"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["src", "LICENSE", "README.md", "screenshot.gif", ".config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.43"
clap = { version = "4.5.18", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.5"
config = "0.15.13"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "1.3.0"
lazy_static = "1.5.0"
libc = "0.2.182"
log = "0.4.27"
nostr-sdk = "0.44.0"
nowhear = "0.1"
percent-encoding = "2.3.2"
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
regex = "1.11.1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.1"
sorted-vec = "0.8.6"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
tears = { git = "https://github.com/akiomik/tears", branch = "ratatui-0.29" }
thousands = "0.2.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }
tui-textarea = "0.7.0"
tui-widget-list = "0.13.2"
unicode-width = "0.2.0"

[dev-dependencies]
criterion = "0.8"
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[lints.clippy]
absolute_paths = "warn"
clone_on_ref_ptr = "warn"
items_after_statements = "warn"
redundant_clone = "warn"
uninlined_format_args = "warn"
used_underscore_binding = "warn"
unwrap_used = "warn"

[[bench]]
name = "wrap_text"
harness = false
