[package]
name = "nostui"
version = "0.1.1"
edition = "2021"
description = "A TUI client for Nostr"
keywords = ["nostr", "tui", "client", "ratatui"]
categories = ["command-line-utilities"]
repository = "https://github.com/akiomik/nostui"
homepage = "https://github.com/akiomik/nostui"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["src", "LICENSE", "README.md", "screenshot.gif", ".config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6"
config = "0.15"
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
derive_deref = "1"
directories = "6"
futures = "0.3"
human-panic = "2"
json5 = "1"
lazy_static = "1"
libc = "0.2"
log = "0.4"
nostr-sdk = "0.44"
nowhear = "0.5"
percent-encoding = "2"
ratatui = { version = "0.30", features = ["serde", "macros"] }
regex = "1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
sorted-vec = "0.8"
strip-ansi-escapes = "0.2"
strum = { version = "0.28", features = ["derive"] }
tears = "0.8"
thousands = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tui-textarea-2 = "0.11"
tui-widget-list = "0.15"
unicode-width = "0.2"

[dev-dependencies]
criterion = "0.8"
pretty_assertions = "1"
rstest = "0.26"

[lints.clippy]
absolute_paths = "warn"
clone_on_ref_ptr = "warn"
items_after_statements = "warn"
redundant_clone = "warn"
uninlined_format_args = "warn"
used_underscore_binding = "warn"
unwrap_used = "warn"

[[bench]]
name = "wrap_text"
harness = false
